2005-02-13  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: some small memory leaks and potential buffer overflows

2005-02-11  Roman Bogorodskiy <bogorodskiy@inbox.ru>
	
	* feature: added HELP command

2005-02-08  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: server does not change uid when running as root
	* bugfix: added several mutexes to avoid race conditions
	* feature: CHPASS command changed to allow changing own password
	* feature: new directive 'server_gid'

2005-02-04  Pierre Chifflier  <pollux@cpe.fr>

	* feature: new commands SSCN and CPSV, used for secure FXP
	* feature: errors in TCL module are catched and put in a log file
	* bugfix: file descriptors not closed on ident connections
	* bugfix: file descriptors not closed in win32 version
	* bugfix: dynamic_ip not working
	* bugfix: FXP not working when using PORT in clear mode

2005-01-28  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: disable file cache code, it is broken (not thread-safe)
	* bugfix: removed some calls to gethostbyname (not thread-safe)

2005-01-25  Pierre Chifflier  <pollux@cpe.fr>

	* feature: added event DELE when a file is deleted

2005-01-18  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: problems with > 2GB files on 32-bit arches (closes: #0024)

2005-01-14  Pierre Chifflier  <pollux@cpe.fr>

	* feature: use statvfs instead of statfs if detected
	* feature: option "reject_unknown_user" to reject users after USER command
	* feature: the main part (server+lib) now compiles on solaris
	* feature: libwzd-perl now works: wzd_send_message added
	* bugfix: build error on openbsd (crypt.h)

2005-01-12  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: server sending garbage on 64-bits platforms
	* bugfix: libmysql.h missing, unable to compile mysql backend

2005-01-07  Pierre Chifflier  <pollux@cpe.fr>

	* feature: all site commands converted to new format
	* feature: configure checks if system adds _ to exported symbols
	* bugfix: include wchar.h only if needed
